# Basic-Reborn

./: .gitignore  CMakeLists.txt  README.md  main.cpp
CMake/: itch.io.cmake
Docs/html/: changelog.html  search.js  searchdata.js  struct_a_s_g_e_1_1_f_i_l_e_i_o_1_1_file.html
Libs/ASGE/include/Engine/: FileIO.h
Resources/Data/Items/: itemfile.txt
Resources/Data/Location/: locationdirfile.txt  locationfile.txt
Source/: Item.cpp  Item.h  Location.cpp  Location.h  MyGame.cpp  MyGame.h  Player.cpp  Player.h  constant.h
